--- a/shop_page2.html
+++ b/shop_page2.html
@@ -62,9 +62,9 @@
                     },
                     {
                         id: '3',
-                        counts: '12',
+                        counts: '24',
                         pic: './images/shop_images/item3.jpg',
-                        name: '璀璨星河禮盒12入',
+                        name: '璀璨星河禮盒24入',
                         price: '2,800',
                         text: '璀璨星河禮盒帶來星光般的美麗，內含精緻巧克力，每一口都充滿浪漫與驚喜。'
                     },
@@ -74,7 +74,8 @@
                         pic: './images/shop_images/item4.jpg',
                         name: '璀璨七夕-情人節禮盒',
                         price: '3,000',
-                        text: '專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。'
+                        text: '專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。',
+                        fes: 'valentines'
                     },
                     {
                         id: '5',
@@ -82,7 +83,8 @@
                         pic: './images/shop_images/item5-1.jpg',
                         name: '熱戀之吻-情人節禮盒',
                         price: '3,000',
-                        text: '熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。'
+                        text: '熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。',
+                        fes: 'valentines'
                     },
                     {
                         id: '6',
@@ -98,7 +100,8 @@
                         pic: './images/shop_images/item7.jpg',
                         name: '生日快樂-巧克力禮盒',
                         price: '1,800',
-                        text: '為生日精心準備的巧克力禮盒，充滿甜蜜和祝福，讓每一口都帶來快樂與驚喜。'
+                        text: '為生日精心準備的巧克力禮盒，充滿甜蜜和祝福，讓每一口都帶來快樂與驚喜。',
+                        fes: 'birthday'
                     },
                     {
                         id: '8',
@@ -114,8 +117,9 @@
                         pic: './images/shop_images/item9.jpg',
                         name: '麋鹿聖誕-巧克力禮盒',
                         price: '3,000',
-                        text: '聖誕節限定巧克力禮盒，精緻設計與美味巧克力，增添節日的歡樂與喜悅。'
-                    },{
+                        text: '聖誕節限定巧克力禮盒，精緻設計與美味巧克力，增添節日的歡樂與喜悅。',
+                        fes: 'otherDays'
+                    }, {
                         id: '10',
                         counts: '4',
                         pic: './images/shop_images/item10.jpg',
@@ -145,7 +149,8 @@
                         pic: './images/shop_images/item13.jpg',
                         name: '璀璨七夕-情人節禮盒',
                         price: '800',
-                        text: '專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。'
+                        text: '專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。',
+                        fes: 'valentines'
                     },
                     {
                         id: '14',
@@ -153,7 +158,8 @@
                         pic: './images/shop_images/item14.jpg',
                         name: '熱戀之吻-情人節禮盒',
                         price: '980',
-                        text: '熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。'
+                        text: '熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。',
+                        fes: 'valentines'
                     },
                     {
                         id: '15',
@@ -161,7 +167,8 @@
                         pic: './images/shop_images/item15.jpg',
                         name: '生日快樂-慶生禮盒',
                         price: '980',
-                        text: '生日巧克力禮盒，特別為慶祝生日打造，甜美的巧克力表達最真誠的祝福。'
+                        text: '生日巧克力禮盒，特別為慶祝生日打造，甜美的巧克力表達最真誠的祝福。',
+                        fes: 'birthday'
                     }
                 ];
 
@@ -169,13 +176,33 @@
                 // 創建狀態來管理篩選條件
                 const [filteredItems, setFilteredItems] = React.useState(items);
                 const [selectedPriceRange, setSelectedPriceRange] = React.useState(null);
+                const [selecteCountsRange, setSelectedCountsRange] = React.useState(null);
+                const [selecteFestivalRange, setSelectedFestivalRange] = React.useState(null);
 
                 // 創建狀態來控制每個下拉菜單的顯示狀態
                 const [showFestivalDropdown, setShowFestivalDropdown] = React.useState(false);
                 const [showCountsDropdown, setShowCountsDropdown] = React.useState(false);
                 const [showPriceDropdown, setShowPriceDropdown] = React.useState(false);
                 const [showPermutationDropdown, setShowPermutationDropdown] = React.useState(false);
-
+                const handleFestivalFilter = (range) => {
+                    setSelectedFestivalRange(range);
+                    const filtered = items.filter(item => {
+                        const fes = item.fes;
+                        switch (range) {
+                            case 'valentines':
+                                return fes === 'valentines' ;
+                            case 'birthday':
+                                return fes === 'birthday';
+                            case 'graduation':
+                                return fes === 'graduation';
+                            case 'otherDay':
+                                return  fes === 'otherDay';
+                            default:
+                                return true;
+                        }
+                    });
+                    setFilteredItems(filtered);
+                };
                 const handlePriceFilter = (range) => {
                     setSelectedPriceRange(range);
                     const filtered = items.filter(item => {
@@ -195,6 +222,28 @@
                     });
                     setFilteredItems(filtered);
                 };
+                const handleCountsFilter = (range) => {
+                    console.log('Selected counts range:', range); // 確認選擇的篩選條件
+                    setSelectedCountsRange(range);
+                    const filtered = items.filter(item => {
+                        const counts = parseInt(item.counts.replace(',', '').trim());
+                        console.log('Item counts:', counts); // 確認每個 item 的 counts
+                        switch (range) {
+                            case 'are4':
+                                return counts === 4;
+                            case 'are6':
+                                return counts === 6;
+                            case 'are12':
+                                return counts === 12;
+                            case 'are24':
+                                return counts === 24;
+                            default:
+                                return true;
+                        }
+                    });
+                    setFilteredItems(filtered);
+                };
+                console.log(typeof handleCountsFilter);
 
                 // 函數：切換下拉菜單的顯示狀態
                 //    const toggleDropdown = (dropdownSetter) => {
@@ -225,11 +274,15 @@
                 return (<>
                     <section id="items_content">
                         <ShopFilter
+                        
+                            handleFestivalFilter={handleFestivalFilter}
+                            handleCountsFilter={handleCountsFilter}
                             handlePriceFilter={handlePriceFilter}
                             toggleDropdown={toggleDropdown}
                             showPriceDropdown={showPriceDropdown}
                             showCountsDropdown={showCountsDropdown}
                             showFestivalDropdown={showFestivalDropdown}
+                            showPermutationDropdown={showPermutationDropdown}
                         />
 
                         <div class="items_list">
