0827-Chocolate_custom_screen1

--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -147,14 +147,34 @@
                 <div id="center_display_second_page_make_img">
                     <img src="./images/Custom_block/small_chocolate/downloadedImage 1.svg" alt="">
                     <div id="center_display_second_page_box">
-                        <div id="center_display_second_page_box_div1"></div>
-                        <div id="center_display_second_page_box_div2"></div>
-                        <div id="center_display_second_page_box_div3"></div>
+                        <div id="center_display_second_page_box_div1">
+                            <img src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate1">
+                        </div>
+                        <div id="center_display_second_page_box_div2">
+                            <img src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate2">
+                        </div>
+                        <div id="center_display_second_page_box_div3">
+                            <img src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate3">
+                        </div>
                     </div>
                 </div>
                 <div class="center_display_second_page_box">
                     <img id="center_display_second_page_box1"
-                        src="./images/Custom_block/small_chocolate/downloadedImage 2.svg" alt="">
+                        src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
+                    <div id="second_page_smallbox">
+                        <div id="second_page_smallbox_div1"><img
+                                src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate4"></div>
+                        <div id="second_page_smallbox_div2"><img
+                                src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate5"></div>
+                        <div id="second_page_smallbox_div3"><img
+                                src="./images/Custom_block/small_chocolate/Basic_small_chocolate.svg" alt=""
+                                id="Basic_small_chocolate6"></div>
+                    </div>
                 </div>
             </div>
             <div id="right_sidebar_second_page">
