--- a/Customization.html
+++ b/Customization.html
@@ -355,29 +355,63 @@
                     <img src="./images/Custom_block/middle/downloadedImage 1-4.svg" alt="" class="middle_img8">
                     <img src="./images/Custom_block/middle/downloadedImage 1-5.svg" alt="" class="middle_img9">
                     <img src="./images/Custom_block/middle/downloadedImage 1-6.svg" alt="" class="middle_img10">
+                    <img src="./images/Custom_block/middle/downloadedImage 4.svg" alt="" class="middle_img11">
+                    <img src="./images/Custom_block/middle/downloadedImage 5.svg" alt="" class="middle_img12">
 
-                    <div id="middle_div1_box">
-                        <div id="middle_div1_box_div1" class="middle_div1_box_div1">
-                        </div>
-                        <div id="middle_div1_box_div2" class="middle_div1_box_div2"></div>
-                        <div id="middle_div1_box_div3"></div>
-                        <div id="middle_div1_box_div4"></div>
-                        <div id="middle_div1_box_div5"></div>
-                        <div id="middle_div1_box_div6"></div>
-                        <div id="middle_div1_box_div7"></div>
-                        <div id="middle_div1_box_div8"></div>
-                        <div id="middle_div1_box_div9"></div>
-                        <div id="middle_div1_box_div10"></div>
-                        <div id="middle_div1_box_div11"></div>
-                        <div id="middle_div1_box_div12"></div>
-                        <div id="middle_div1_box_div13"></div>
-                        <div id="middle_div1_box_div14"></div>
-                        <div id="middle_div1_box_div15"></div>
+
+                </div>
+                <div id="middle_div1_box">
+                    <div id="middle_div1_box_div1" class="middle_div1_box_div1">
                     </div>
+                    <div id="middle_div1_box_div2" class="middle_div1_box_div2"></div>
+                    <div id="middle_div1_box_div3"></div>
+                    <div id="middle_div1_box_div4"></div>
+                    <div id="middle_div1_box_div5"></div>
+                    <div id="middle_div1_box_div6"></div>
+                    <div id="middle_div1_box_div7"></div>
+                    <div id="middle_div1_box_div8"></div>
+                    <div id="middle_div1_box_div9"></div>
+                    <div id="middle_div1_box_div10"></div>
+                    <div id="middle_div1_box_div11"></div>
+                    <div id="middle_div1_box_div12"></div>
+                    <div id="middle_div1_box_div13"></div>
+                    <div id="middle_div1_box_div14"></div>
+                    <div id="middle_div1_box_div15"></div>
+
                 </div>
                 <div class="middle_box">
-                    <div id="middle_box_divbox">
-                        <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
+                    <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
+                    <img src="./images/Custom_block/middle/downloadedImage-Photoroom 4.svg" alt="" id="middle_box_img1">
+                    <img src="./images/Custom_block/middle/downloadedImage 1.svg" alt="" id="middle_box_img2">
+                    <img src="./images/Custom_block/middle/downloadedImage 2.svg" alt="" id="middle_box_img3">
+                    <img src="./images/Custom_block/middle/downloadedImage 3.svg" alt="" id="middle_box_img4">
+                    <img src="./images/Custom_block/middle/downloadedImage 4.svg" alt="" id="middle_box_img5">
+                    <img src="./images/Custom_block/middle/downloadedImage 5.svg" alt="" id="middle_box_img6">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-1.svg" alt="" id="middle_box_img7">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-2.svg" alt="" id="middle_box_img8">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-3.svg" alt="" id="middle_box_img9">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-4.svg" alt="" id="middle_box_img10">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-5.svg" alt="" id="middle_box_img11">
+                    <img src="./images/Custom_block/middle/downloadedImage 1-6.svg" alt="" id="middle_box_img12">
+                    <div id="middle_small_box">
+                        <div id="middle_small_box1"></div>
+                        <div id="middle_small_box2"></div>
+                        <div id="middle_small_box3"></div>
+                        <div id="middle_small_box4"></div>
+                        <div id="middle_small_box5"></div>
+                        <div id="middle_small_box6"></div>
+                        <div id="middle_small_box7"></div>
+                        <div id="middle_small_box8"></div>
+                        <div id="middle_small_box9"></div>
+                        <div id="middle_small_box10"></div>
+                        <div id="middle_small_box11"></div>
+                        <div id="middle_small_box12"></div>
+                        <div id="middle_small_box13"></div>
+                        <div id="middle_small_box14"></div>
+                        <div id="middle_small_box15">
+                            <!-- <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg">
+                            <img src="./images/Custom_block/left_menu/third_floor/Ellipse 5.svg"> -->
+                        </div>
                     </div>
                 </div>
             </div>
@@ -395,6 +429,7 @@
                     </a>
                 </div>
             </div>
+        </div>
         </div>
         <div id="menu_below">
             <div>
