--- a/index3.html
+++ b/index3.html
@@ -75,7 +75,7 @@
 
             </div>
             <div class="class_right">
-                <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
+                <a href="./shop_page2.html"><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
                     <div class="text1">我們秉持著精益求精的態度</div>
                     <div class="text2">從全球各地精選最優質的可可豆</div>
@@ -153,6 +153,7 @@
                 <img class="pic" src="./index_images/appearance--pic.svg" alt="">
                 <div class="arch"></div>
                 <div class="box_br"></div>
+                
                 <div class="text_all">
                     <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
                     <div class="text2">更是一件藝術品。</div>
@@ -161,6 +162,7 @@
                     <div class="text5">讓您的贈禮更添品味與心意</div>
 
                 </div>
+               
 
             </div>
         </section>
