--- a/index3.html
+++ b/index3.html
@@ -84,27 +84,30 @@
                 </div>
                 <div class="main_wrap">
                     <img class="main_pic" src="./index_images/classic--pic.png" alt="">
-                    <img class="title"
-                        src="./index_images/classic_title.svg" alt="">
+                    <img class="title" src="./index_images/classic_title.svg" alt="">
                 </div>
 
             </div>
 
         </section>
         <section id="ABOUT">
-            <div class="section_about">
+            <div class="about_left">
                 <img class="main_pic" src="./index_images/about--pic.png" alt="">
-                <img class="title" src="./index_images/about--title.svg" alt="">
-                <div class="little_bg"></div>
-                <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
-                <div class="text_all">
-                    <div class="text1">在Mélange</div>
-                    <div class="text2">巧克力都可以根據你的需求量身定制</div>
-                    <div class="text3">無論是刻上名字，還是融入特殊元素</div>
-                    <div class="text4">我們都能滿足你的個性化需求</div>
-                    <div class="text5">讓每一份禮物更加獨特而珍貴</div>
-                </div>
             </div>
+            <div class="about_right">
+                <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
+                <div class="little_bg">
+                    <img class="title" src="./index_images/about--title.svg" alt="">
+                    <div class="text_all">
+                        <div class="text1">在Mélange</div>
+                        <div class="text2">巧克力都可以根據你的需求量身定制</div>
+                        <div class="text3">無論是刻上名字，還是融入特殊元素</div>
+                        <div class="text4">我們都能滿足你的個性化需求</div>
+                        <div class="text5">讓每一份禮物更加獨特而珍貴</div>
+                    </div>
+                </div>
+
+
             </div>
         </section>
         <section id="QUALITY">
@@ -153,7 +156,7 @@
                 <img class="pic" src="./index_images/appearance--pic.svg" alt="">
                 <div class="arch"></div>
                 <div class="box_br"></div>
-                
+
                 <div class="text_all">
                     <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
                     <div class="text2">更是一件藝術品。</div>
@@ -162,7 +165,7 @@
                     <div class="text5">讓您的贈禮更添品味與心意</div>
 
                 </div>
-               
+
 
             </div>
         </section>
