0827-Chocolate_custom_screen3

--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -116,12 +116,15 @@
                         <p id="left_sidebar_four_page_div3_div1_p3">顏色</p>
                     </div>
                     <div id="left_sidebar_four_page_div3_div4_div">
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 12.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 13.svg"
-                                alt=""></a>
-                        <a href="#"><img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 104.svg"
-                                alt=""></a>
+                        <a href="#" id="left_sidebar_four_page_div3_div4_diva1">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 12.svg"
+                                alt="" id="left_sidebar_four_page_div3_div4_div_img1"></a>
+                        <a href="#" id="left_sidebar_four_page_div3_div4_diva2">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 13.svg"
+                                alt="" id="left_sidebar_four_page_div3_div4_div_img2"></a>
+                        <a href="#" id="left_sidebar_four_page_div3_div4_diva3">
+                            <img src="./images/Custom_block/Customized_cards/left_sidebar/Frame 104.svg"
+                                alt="" id="left_sidebar_four_page_div3_div4_div_img3"></a>
                     </div>
                     <div id="left_sidebar_four_page_div3_box">
                         <img src="./images/Custom_block/small_chocolate/Frame btn.svg" alt="">
