0827-Chocolate_custom_screen4

--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -12,18 +12,43 @@
     <main id="main">
         <div id="menu">
             <ul id="menu_id">
-                <li id="menu_id_li"><a href="#">HOME</a></li>
-                <li id="menu_id_li"><a href="#">SHOP</a></li>
-                <li id="menu_id_li"><a href="#">ABOUT</a></li>
-                <li id="menu_id_li"><a href="#">NEWS</a></li>
-                <li id="menu_id_li"><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized">
-                        <p>customized</p>
-                    </a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
-                            alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
+                <div id="menu_id_menu">
+                    <li id="menu_id_li"><a href="#">HOME</a></li>
+                    <li id="menu_id_li"><a href="#">SHOP</a></li>
+                    <li id="menu_id_li"><a href="#">ABOUT</a></li>
+                    <li id="menu_id_li"><a href="#">NEWS</a></li>
+                    <li id="menu_id_li"><a href="#">Q&A</a></li>
+                    <li id="menu_id_menu_icon"><a href="#" id="customized">
+                            <p>customized</p>
+                        </a></li>
+                </div>
+                <div id="menu_id_icon">
+                    <li><a href="#" id="menu_id_icon_search"><img
+                                src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
+                    </li>
+                    <li id="menu_id_icon_show"><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                    </li>
+                    <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                                alt=""></a></li>
+                </div>
+            </ul>
+            <ul id="menu_id_search">
+                <li>
+                    <div id="menu_id_search_divBox">
+                        <!-- <div id="menu_id_search_divBox_divbox"> -->
+                        <a href="#" id="menu_id_search_divBox_a1"><img src="./images/Custom_block/menu/search.svg"
+                                alt="">
+                            <p>搜尋</p>
+                        </a>
+                        <!-- </div> -->
+                        <a href="#" id="menu_id_search_divBox_a2"><img src="./images/Custom_block/menu/Xicon.svg"
+                                alt=""></a>
+                    </div>
+                <li><a href="#" id="menu_id_search_li2"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a>
+                </li>
+                <li><a href="#" id="menu_id_search_li3"><img
+                            src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                </li>
             </ul>
         </div>
         <div id="product_details_page_tab">
@@ -53,8 +78,8 @@
                         <div id="product_details_page_tab_div1_produc_minus_sign">
                             <button>
                                 <a href="#">
-                                <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
-                            </a>
+                                    <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
+                                </a>
                             </button>
                         </div>
                         <div>
@@ -63,8 +88,8 @@
                         <div id="product_details_page_tab_div1_produc_plus_sign">
                             <button>
                                 <a href="#">
-                                <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
-                            </a>
+                                    <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
+                                </a>
                             </button>
                         </div>
                     </div>
@@ -121,17 +146,17 @@
                             <p>摩卡經典禮盒12入</p>
                         </div>
                         <div id="product_details_page_tab_div6_div_chookdan">
-                            <p id="product_details_page_tab_div6_div_chookdan_p1">產品成分:</p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p1">■ 產品成分:</p>
                             <p id="product_details_page_tab_div6_div_chookdan_p2">黑巧克力（砂糖、可可膏、可可脂、大豆卵磷脂、香料）
                             </p>
                             <p id="product_details_page_tab_div6_div_chookdan_p2-1">咖啡風味巧克力（砂糖、可可膏、可可脂、咖啡提取物、大豆卵磷脂、香料）
                             </p>
-                            <p id="product_details_page_tab_div6_div_chookdan_p3">過敏成分: 乳製品</p>
-                            <p id="product_details_page_tab_div6_div_chookdan_p4">保存期限:24個月 (2025/7/15 )
+                            <p id="product_details_page_tab_div6_div_chookdan_p3">■ 過敏成分: 乳製品</p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p4">■ 保存期限:24個月 (2025/7/15 )
                             </p>
-                            <p id="product_details_page_tab_div6_div_chookdan_p5">保存方法:請放置於陰涼乾燥處，最適合的存放溫度為16度至22度
+                            <p id="product_details_page_tab_div6_div_chookdan_p5">■ 保存方法:請放置於陰涼乾燥處，最適合的存放溫度為16度至22度
                             </p>
-                            <p id="product_details_page_tab_div6_div_chookdan_p6">淨克重: 150公克
+                            <p id="product_details_page_tab_div6_div_chookdan_p6">■ 淨克重: 150公克
                             </p>
                         </div>
                     </div>
@@ -139,20 +164,20 @@
                         <div>
                             <p id="product_details_page_tab_div6_div_cash_menu">付款方式</p>
                             <div>
-                                <p id="product_details_page_tab_div6_div_cash_p1">信用卡</p>
-                                <p id="product_details_page_tab_div6_div_cash_p2">ATM付款</p>
-                                <p id="product_details_page_tab_div6_div_cash_p3">貨到付款</p>
-                                <p id="product_details_page_tab_div6_div_cash_p4">LINE Pay</p>
-                                <p id="product_details_page_tab_div6_div_cash_p5">街口支付</p>
+                                <p id="product_details_page_tab_div6_div_cash_p1">■ 信用卡</p>
+                                <p id="product_details_page_tab_div6_div_cash_p2">■ ATM付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_p3">■ 貨到付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_p4">■ LINE Pay</p>
+                                <p id="product_details_page_tab_div6_div_cash_p5">■ 街口支付</p>
                             </div>
                         </div>
                         <div>
                             <p id="product_details_page_tab_div6_div_cash_outin">付款方式</p>
                             <div>
-                                <p id="product_details_page_tab_div6_div_cash_outin_p1">宅配</p>
-                                <p id="product_details_page_tab_div6_div_cash_outin_p2">超商取貨</p>
-                                <p id="product_details_page_tab_div6_div_cash_outin_p3">貨到付款</p>
-                                <p id="product_details_page_tab_div6_div_cash_outin_p4">商店門市自取</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p1">■ 宅配</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p2">■ 超商取貨</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p3">■ 貨到付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p4">■ 商店門市自取</p>
                             </div>
                         </div>
                     </div>
@@ -174,7 +199,7 @@
             <footer>
                 <div class="wrap">
                     <a class="logo" href="#"><img src="./images/footer_logo.svg" alt=""></a>
-                    <div class="bottom_nav">               
+                    <div class="bottom_nav">
                         <ul class="menu">
                             <li><a href="./index.html" id="home">首頁</a></li>
                             <li><a href="#" id="news">最新消息</a></li>
@@ -195,7 +220,6 @@
             </footer>
         </div>
     </main>
-    <!-- <script src="./js/jq.js"></script> -->
     <script src="./js/Customization.js"></script>
 </body>
 
