--- a/Q&A.html
+++ b/Q&A.html
@@ -13,7 +13,7 @@
     <script type="text/babel" src="./Footer.jsx"></script>
     <link rel="stylesheet" href="./css/Footer.css">
     <!-- 引用menu -->
-     <script type="text/babel" src="./Menu.jsx"></script>
+    <script type="text/babel" src="./Menu.jsx"></script>
     <link rel="stylesheet" href="./css/Menu.css">
 
     <title>Q&A</title>
@@ -71,76 +71,136 @@
                         };
 
                         const App = () => {
-                            const qnas_type1 = [
-                                {
-                                    id: 1,
-                                    question: '可以為特殊活動（如婚禮或企業活動）製作特別設計的巧克力嗎？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-                                },
-                                {
-                                    id: 2,
-                                    question: '可以為特殊活動（如婚禮或企業活動）製作特別設計的巧克力嗎？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                },
-                                {
-                                    id: 3,
-                                    question: '可以為特殊活動（如婚禮或企業活動）製作特別設計的巧克力嗎？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                },
-                                {
-                                    id: 4,
-                                    question: '可以為特殊活動（如婚禮或企業活動）製作特別設計的巧克力嗎？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                },
-                                {
-                                    id: 5,
-                                    question: '可以為特殊活動（如婚禮或企業活動）製作特別設計的巧克力嗎？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                }
-                            ]
+                            const qnas_type1 = [{
+                                id: 1,
+                                question: '你們的巧克力使用什麼原料？',
+                                ans: '我們使用高品質的可可豆、純天然的糖和奶製品。我們的巧克力不添加人造色素或香料。',
+                            },
+                            {
+                                id: 2,
+                                question: '是否提供素食或無乳糖的巧克力？',
+                                ans: '是的，我們提供素食巧克力選擇，並且有無乳糖的選擇，請在訂購時告知我們您的需求。',
+                            },
+                            {
+                                id: 3,
+                                question: '我可以選擇不同的口味嗎？',
+                                ans: '當然可以。我們提供多種口味，包括黑巧克力、牛奶巧克力和白巧克力，還有各種口味的混合巧克力。',
+                            },
+                            {
+                                id: 4,
+                                question: '客製化巧克力的最小訂購量是多少？',
+                                ans: '我們的最小訂購量為50顆巧克力。大訂單可享有折扣優惠。',
+                            },
+                            {
+                                id: 5,
+                                question: '客製化的設計需要多久時間？',
+                                ans: '客製化設計通常需要5-7個工作日來完成，具體時間取決於設計的複雜程度和訂單數量。',
+                            },
+                            {
+                                id: 6,
+                                question: '如何儲存我的巧克力？',
+                                ans: '我們建議將巧克力儲存在陰涼乾燥的地方，避免陽光直射和高溫。最佳儲存溫度為15-20°C。',
+                            },
+                            {
+                                id: 7,
+                                question: '如果我對收到的巧克力不滿意，可以退貨嗎？',
+                                ans: '我們對所有訂單都提供滿意保證。如果巧克力在送達過程中有損壞或錯誤，請聯繫我們的客服進行退貨或換貨。',
+                            },
+                            {
+                                id: 8,
+                                question: '你們是否提供國際配送？',
+                                ans: '是的，我們提供國際配送服務。運費和配送時間會根據目的地有所不同。',
+                            },
+                            {
+                                id: 9,
+                                question: '是否可以在巧克力上印刷文字或圖片？',
+                                ans: '是的，我們可以在巧克力上印刷自定義的文字或圖片。請提供您的設計文件，我們會根據您的要求進行製作。',
+                            },
+                            {
+                                id: 10,
+                                question: '如何查詢訂單狀態？',
+                                ans: '您可以通過我們的網站登錄帳戶查詢訂單狀態，或者聯繫我們的客服團隊，我們會提供最新的訂單信息。',
+                            }];
                             const qnas_type2 = [
                                 {
                                     id: 1,
-                                    question: '客製化巧克力的價格如何計算？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
+                                    question: '我可以自定義巧克力的形狀嗎？',
+                                    ans: '是的，我們可以根據您的需求製作各種形狀的巧克力。請提供您的設計或想法，我們會幫助實現。',
                                 },
                                 {
                                     id: 2,
-                                    question: '客製化巧克力的價格如何計算？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
+                                    question: '如何提供我的設計文件？',
+                                    ans: '您可以通過我們的網站上傳設計文件，或通過電子郵件將文件發送給我們。請確保文件為高解析度格式。',
+                                },
+                                {
+                                    id: 3,
+                                    question: '客製化設計的額外費用是多少？',
+                                    ans: '設計費用會根據複雜程度和訂單數量而有所不同。我們會在您確認設計後提供具體報價。',
+                                },
+                                {
+                                    id: 4,
+                                    question: '是否可以在巧克力上添加特殊的配料或裝飾？',
+                                    ans: '是的，我們可以在巧克力中添加各種配料，如堅果、乾果、糖果等，還可以用特殊裝飾來裝飾巧克力。',
+                                },
+                                {
+                                    id: 5,
+                                    question: '我能選擇巧克力的包裝樣式嗎？',
+                                    ans: '可以，我們提供多種包裝選擇，包括禮品盒、包裝袋等。您可以選擇最符合您需求的包裝樣式。',
+                                },
+                                {
+                                    id: 6,
+                                    question: '我可以訂製巧克力的味道組合嗎？',
+                                    ans: '是的，您可以選擇多種巧克力口味進行組合，根據您的喜好來搭配。',
+                                },
+                                {
+                                    id: 7,
+                                    question: '如何確認我的設計是否符合預期？',
+                                    ans: '在開始生產之前，我們會提供設計樣稿給您確認。您可以檢查樣稿並提供反饋，直到您滿意為止。',
+                                },
+                                {
+                                    id: 8,
+                                    question: '如果我想要大批量訂製，是否可以享有折扣？',
+                                    ans: '是的，大批量訂製可以享受折扣。我們會根據訂單數量和客製化要求提供相應的優惠。',
+                                },
+                                {
+                                    id: 9,
+                                    question: '我可以要求不含某些過敏原的巧克力嗎？',
+                                    ans: '可以，我們會根據您的需求提供不含特定過敏原的巧克力，請在訂購時告知我們。',
+                                },
+                                {
+                                    id: 10,
+                                    question: '客製化巧克力是否適合用於婚禮或其他活動？',
+                                    ans: '是的，我們的客製化巧克力非常適合用於婚禮、生日派對、公司活動等。我們可以根據活動主題設計巧克力。',
                                 }
-                            ]
+                            ];
+
                             const qnas_type3 = [
                                 {
                                     id: 1,
-                                    question: '我是廠商？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
+                                    question: '如何成為你們的供應商或合作夥伴？',
+                                    ans: '請通過我們的網站提交合作申請或直接聯繫我們的業務發展部門。我們會根據您的提案進行審核並回覆您。',
                                 },
                                 {
                                     id: 2,
-                                    question: '我是廠商？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                }, 
+                                    question: '是否接受外部設計公司提供的設計服務？',
+                                    ans: '是的，我們歡迎設計公司提供設計服務。請聯繫我們，提供您的設計方案，我們會進行評估並討論合作細節。',
+                                },
                                 {
                                     id: 3,
-                                    question: '我是廠商？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
-                                
-                                }, 
+                                    question: '我可以參與你們的產品開發過程嗎？',
+                                    ans: '當然可以。如果您有新穎的產品概念或改進建議，我們樂意與您合作，將您的想法融入到我們的產品中。',
+                                },
                                 {
                                     id: 4,
-                                    question: '我是廠商？',
-                                    ans: '是的，我們可以為各種特殊活動提供特別設計的巧克力。無論是婚禮、生日派對還是其他慶祝場合，我們都能根據您的需求創作獨一無二的巧克力產品。同時我們 提供多種設計選項，包括在巧克力上印製文字、裝飾，並可以選擇多種形狀和口味。此外，我們還提供個性化的包裝服務，確保您的巧克力禮品既美觀又具紀念意義。無論您的活動規模大小，我們都能為您量身定制，提供高品質的巧克力產品來增添活動的亮點。',
-
+                                    question: '如何訂購大批量的原料或產品？',
+                                    ans: '請聯繫我們的業務部門，提供您的訂單需求，我們會提供報價和交貨時間，並協助完成訂購流程。',
+                                },
+                                {
+                                    id: 5,
+                                    question: '你們是否提供品牌聯名或合作活動的機會？',
+                                    ans: '是的，我們樂意探索品牌聯名和合作活動的機會。請提供您的合作計劃，我們會與您討論可能的合作模式。',
                                 }
-                            ]
+                            ];
 
                             // 使用 useState 初始化状态为 qnas_type1
                             const [qnas, setQnas] = React.useState(qnas_type1);
